Include the javadoc archive into the Android binding project.

--- a/.gitignore
+++ b/.gitignore
@@ -415,5 +415,6 @@ tools/**
 
 # Cobrowse.io Native SDKs
 Android/CobrowseIO.Android/Jars/cobrowse-sdk-android-LATEST.aar
+Android/CobrowseIO.Android/Jars/cobrowse-sdk-android-LATEST-javadoc.jar
 iOS/CobrowseIO.iOS/CobrowseIO.framework/**
 iOS/CobrowseIO.AppExtension.iOS/CobrowseIOAppExtension.framework/**
