--- a/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
+++ b/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
@@ -83,6 +83,9 @@
   <ItemGroup>
     <LibraryProjectZip Include="Jars\cobrowse-sdk-android-LATEST.aar" />
   </ItemGroup>
+  <ItemGroup>
+    <JavaDocJar Include="Jars\cobrowse-sdk-android-LATEST-javadoc.jar" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
