Reflect new API from iOS SDK 2.14.0 and Android SDK 2.12.1.

--- a/iOS/CobrowseIO.iOS/CobrowseIO.iOS.csproj
+++ b/iOS/CobrowseIO.iOS/CobrowseIO.iOS.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
+    <ObjcBindingCoreSource Include="StructsAndEnums.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Starscream.iOS\Starscream.iOS.csproj">
