fix: add NoBindingEmbedding to the iOS binding projects.
"NoBindingEmbedding = True" is required when using an XCFramework, otherwise the comsuming app project will get linker errors on all Objective-C classes.
https://github.com/xamarin/xamarin-macios/issues/10774#issuecomment-791518403

--- a/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.csproj
+++ b/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>CobrowseIO.AppExtension.iOS</AssemblyName>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <Description>https://github.com/cobrowseio/cobrowse-sdk-ios-binary/tree/master/CobrowseIOAppExtension.xcframework</Description>
+    <NoBindingEmbedding>true</NoBindingEmbedding>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
