--- a/iOS/SwiftCBOR.iOS/SwiftCBOR.iOS.csproj
+++ b/iOS/SwiftCBOR.iOS/SwiftCBOR.iOS.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>SwiftCBOR.iOS</AssemblyName>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <Description>https://github.com/myfreeweb/SwiftCBOR</Description>
+    <NoBindingEmbedding>true</NoBindingEmbedding>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
