--- a/iOS/Starscream.iOS/Starscream.iOS.csproj
+++ b/iOS/Starscream.iOS/Starscream.iOS.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>Starscream.iOS</AssemblyName>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <Description>https://github.com/daltoniam/Starscream</Description>
+    <NoBindingEmbedding>true</NoBindingEmbedding>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
