--- a/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.csproj
+++ b/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.csproj
@@ -59,5 +59,8 @@
       <Name>SwiftCBOR.iOS</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="CobrowseIO.AppExtension.iOS.targets" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
