--- a/iOS/SwiftCBOR.iOS/SwiftCBOR.iOS.csproj
+++ b/iOS/SwiftCBOR.iOS/SwiftCBOR.iOS.csproj
@@ -52,5 +52,8 @@
       <SmartLink>False</SmartLink>
     </NativeReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="SwiftCBOR.iOS.targets" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
