fix: linking XCFramework when consuming it from Nuget.

--- a/iOS/CobrowseIO.iOS/CobrowseIO.iOS.csproj
+++ b/iOS/CobrowseIO.iOS/CobrowseIO.iOS.csproj
@@ -65,7 +65,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="CobrowseIO.iOS.targets" />
+    <None Include="CobrowseIO.Xamarin.targets" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
