--- a/CobrowseIO.Xamarin.nuspec
+++ b/CobrowseIO.Xamarin.nuspec
@@ -26,8 +26,8 @@
                 <dependency id="Plugin.CurrentActivity" version="2.1.0.4" />
             </group>
             <group targetFramework="Xamarin.iOS10">
-                <dependency id="Starscream.iOS" version="3.1.1.1-pre05" />
-                <dependency id="SwiftCBOR.iOS" version="0.4.3.2-pre05" />
+                <dependency id="Starscream.iOS" version="3.1.1.1-pre08" />
+                <dependency id="SwiftCBOR.iOS" version="0.4.3.2-pre08" />
             </group>
             <group targetFramework="netstandard1.0">
                 <dependency id="NETStandard.Library" version="1.6.1" />
@@ -47,7 +47,7 @@
         <!-- iOS-specific files -->
         <file src="iOS/CobrowseIO.iOS/bin/Release/CobrowseIO.iOS.*" target="lib/Xamarin.iOS10" />
         <file src="iOS/CobrowseIO.iOS/bin/Release/CobrowseIO.iOS.resources/**" target="content/CobrowseIO.iOS.resources" />
-        <file src="iOS/CobrowseIO.iOS/CobrowseIO.iOS.targets" target="build/Xamarin.iOS10" />
+        <file src="iOS/CobrowseIO.iOS/CobrowseIO.Xamarin.targets" target="build/Xamarin.iOS10" />
         <file src="XamarinSDK/CobrowseIO.Xamarin.iOS/bin/Release/CobrowseIO.Xamarin.*" target="lib/Xamarin.iOS10" />
 
         <!-- Package icon -->
