--- a/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.targets
+++ b/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.targets
@@ -1,11 +1,11 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Target Name="BeforeCompile">
+    <Target Name="AddCobrowseIOAppExtension" BeforeTargets="BeforeCompile">
         <ItemGroup>
             <BindingResources Include="$(MSBuildThisFileDirectory)../../content/CobrowseIO.AppExtension.iOS.resources/**/*.*" />
         </ItemGroup>
         <Copy SourceFiles="@(BindingResources)" DestinationFolder="$(TargetDir)/CobrowseIO.AppExtension.iOS.resources/%(RecursiveDir)" ContinueOnError="false" />
         <ItemGroup>
-            <NativeReference Include="$(TargetDir)/CobrowseIO.AppExtension.iOS.resources\CobrowseIO.AppExtension.xcframework">
+            <NativeReference Include="$(TargetDir)/CobrowseIO.AppExtension.iOS.resources\CobrowseIOAppExtension.xcframework">
                 <Kind>Framework</Kind>
                 <SmartLink>False</SmartLink>
             </NativeReference>
