--- a/iOS/Starscream.iOS/Starscream.iOS.targets
+++ b/iOS/Starscream.iOS/Starscream.iOS.targets
@@ -1,5 +1,5 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Target Name="BeforeCompile">
+    <Target Name="AddStarscream" BeforeTargets="BeforeCompile">
         <ItemGroup>
             <BindingResources Include="$(MSBuildThisFileDirectory)../../content/Starscream.iOS.resources/**/*.*" />
         </ItemGroup>
