--- a/iOS/SwiftCBOR.iOS/SwiftCBOR.iOS.targets
+++ b/iOS/SwiftCBOR.iOS/SwiftCBOR.iOS.targets
@@ -1,5 +1,5 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Target Name="BeforeCompile">
+    <Target Name="AddSwiftCBOR" BeforeTargets="BeforeCompile">
         <ItemGroup>
             <BindingResources Include="$(MSBuildThisFileDirectory)../../content/SwiftCBOR.iOS.resources/**/*.*" />
         </ItemGroup>
