--- a/Sample/SampleApp.iOS/SampleApp.iOS.csproj
+++ b/Sample/SampleApp.iOS/SampleApp.iOS.csproj
@@ -49,6 +49,7 @@
         <CodesignKey>iPhone Developer</CodesignKey>
         <MtouchDebug>true</MtouchDebug>
         <DeviceSpecificBuild>false</DeviceSpecificBuild>
+        <MtouchLink>SdkOnly</MtouchLink>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
         <DebugType>none</DebugType>
@@ -59,6 +60,7 @@
         <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
         <MtouchArch>ARM64</MtouchArch>
         <CodesignKey>iPhone Developer</CodesignKey>
+        <MtouchLink>SdkOnly</MtouchLink>
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="System" />
@@ -163,13 +165,13 @@
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="Xamarin.Build.Download">
-        <Version>0.10.0</Version>
+        <Version>0.11.0</Version>
       </PackageReference>
       <PackageReference Include="Xamarin.iOS.SwiftRuntimeSupport">
         <Version>0.2.0</Version>
       </PackageReference>
       <PackageReference Include="CobrowseIO.Xamarin">
-        <Version>3.3.0</Version>
+        <Version>3.4.0</Version>
       </PackageReference>
     </ItemGroup>
     <ItemGroup>
