--- a/CobrowseIO.AppExtension.iOS.nuspec
+++ b/CobrowseIO.AppExtension.iOS.nuspec
@@ -16,8 +16,8 @@
         <tags>xamarin, ios</tags>
         <dependencies>
             <group targetFramework="Xamarin.iOS10">
-                <dependency id="Starscream.iOS" version="3.1.1.1-pre08" />
-                <dependency id="SwiftCBOR.iOS" version="0.4.3.2-pre08" />
+                <dependency id="Starscream.iOS" version="3.1.1.1" />
+                <dependency id="SwiftCBOR.iOS" version="0.4.3.2" />
             </group>
         </dependencies>
         <releaseNotes>https://github.com/cobrowseio/cobrowse-sdk-xamarin/blob/master/CHANGELOG.md</releaseNotes>
