--- a/iOS/CobrowseIO.iOS/CobrowseIO.iOS.csproj
+++ b/iOS/CobrowseIO.iOS/CobrowseIO.iOS.csproj
@@ -45,7 +45,7 @@
     <Compile Include="CobrowseIO.cs" />
   </ItemGroup>
   <ItemGroup>
-    <NativeReference Include="CobrowseIO.xcframework">
+    <NativeReference Include="..\..\cobrowse-sdk-ios-binary\CobrowseIO.xcframework">
       <Kind>Framework</Kind>
       <SmartLink>False</SmartLink>
     </NativeReference>
