--- a/.github/workflows/build-pack-publish.yml
+++ b/.github/workflows/build-pack-publish.yml
@@ -1,4 +1,4 @@
-name: Build, pack a NuGet package, publish to NuGet.org
+name: Build, pack NuGet packages, publish to NuGet.org
 
 on:
   push:
@@ -14,11 +14,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Calculate NuGet package version
-      run: |
-        echo "COBROWSE_NUGET_PACKAGE_VERSION=$(echo ${{ github.ref_name }} | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+')" >> $GITHUB_ENV
-        echo $COBROWSE_NUGET_PACKAGE_VERSION
-
     - name: Run Cake build script
       run: |
         ./build.sh --nugetOrgApiKey="${{ secrets.NUGET_PUSH_TOKEN }}" --verbosity diagnostic
+
+    - name: Copy nupkg files to artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        path: |
+          CborJava.Android.*.nupkg
+          CobrowseIO.AppExtension.iOS.*.nupkg
+          CobrowseIO.Xamarin.*.nupkg
+          NumbersJava.Android.*.nupkg
+          Starscream.iOS.*.nupkg
+          SwiftCBOR.iOS.*.nupkg
+        retention-days: 7
+        if-no-files-found: error
