--- a/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
+++ b/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -83,7 +83,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="Jars\cobrowse-sdk-android-LATEST.aar" />
+    <LibraryProjectZip Include="..\..\cobrowse-sdk-android-binary\io\cobrowse\cobrowse-sdk-android\2.23.0\cobrowse-sdk-android-2.23.0.aar">
+      <Link>Jars\cobrowse-sdk-android-LATEST.aar</Link>
+    </LibraryProjectZip>
   </ItemGroup>
   <!--
   Xamarin.Android 11.2 deprecated the @(JavaDocJar) build action, 
@@ -91,7 +93,9 @@
   https://github.com/xamarin/java.interop/issues/847
 
   <ItemGroup>
-    <JavaDocJar Include="Jars\cobrowse-sdk-android-LATEST-javadoc.jar" />
+    <JavaDocJar Include="..\..\cobrowse-sdk-android-binary\io\cobrowse\cobrowse-sdk-android\2.23.0\cobrowse-sdk-android-2.23.0-javadoc.jar">
+        <Link>Jars\cobrowse-sdk-android-LATEST-javadoc.jar</Link>
+    </JavaDocJar>
   </ItemGroup>
   -->
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
