chore(ci): remove PR Github Actions check

--- a/.github/workflows/update-build-pack.yml
+++ b/.github/workflows/update-build-pack.yml
@@ -1,4 +1,4 @@
-name: Update native SDKs, build and pack NuGet packages
+name: Update native SDKs, build and pack NuGet packages, create a pull request if necessary
 
 on: workflow_dispatch
 
