--- a/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
+++ b/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
@@ -75,6 +75,9 @@
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.Process">
       <Version>2.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.WebKit">
+      <Version>1.4.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CborJava.Android\CborJava.Android.csproj">
