--- a/CobrowseIO.Xamarin.nuspec
+++ b/CobrowseIO.Xamarin.nuspec
@@ -23,6 +23,7 @@
                 <dependency id="Xamarin.AndroidX.AppCompat" version="1.2.0" />
                 <dependency id="Xamarin.AndroidX.ConstraintLayout" version="2.0.4" />
                 <dependency id="Xamarin.AndroidX.Lifecycle.Process" version="2.3.0" />
+                <dependency id="Xamarin.AndroidX.WebKit" version="1.4.0" />
                 <dependency id="Plugin.CurrentActivity" version="2.1.0.4" />
             </group>
             <group targetFramework="Xamarin.iOS10">
