--- a/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
+++ b/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
@@ -13,7 +13,7 @@
     <RootNamespace>CobrowseIO.Android</RootNamespace>
     <AssemblyName>CobrowseIO.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v13.0</TargetFrameworkVersion>
     <AndroidClassParser>class-parse</AndroidClassParser>
     <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
@@ -75,6 +75,9 @@
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.Process">
       <Version>2.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.WebKit">
+      <Version>1.4.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CborJava.Android\CborJava.Android.csproj">
@@ -83,7 +86,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <LibraryProjectZip Include="..\..\cobrowse-sdk-android-binary\io\cobrowse\cobrowse-sdk-android\2.29.0\cobrowse-sdk-android-2.29.0.aar">
+    <LibraryProjectZip Include="..\..\cobrowse-sdk-android-binary\io\cobrowse\cobrowse-sdk-android\2.30.1\cobrowse-sdk-android-2.30.1.aar">
       <Link>Jars\cobrowse-sdk-android-LATEST.aar</Link>
     </LibraryProjectZip>
   </ItemGroup>
@@ -93,7 +96,7 @@
   https://github.com/xamarin/java.interop/issues/847
 
   <ItemGroup>
-    <JavaDocJar Include="..\..\cobrowse-sdk-android-binary\io\cobrowse\cobrowse-sdk-android\2.29.0\cobrowse-sdk-android-2.29.0-javadoc.jar">
+    <JavaDocJar Include="..\..\cobrowse-sdk-android-binary\io\cobrowse\cobrowse-sdk-android\2.30.1\cobrowse-sdk-android-2.30.1-javadoc.jar">
         <Link>Jars\cobrowse-sdk-android-LATEST-javadoc.jar</Link>
     </JavaDocJar>
   </ItemGroup>
