--- a/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
+++ b/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net7.0-android</TargetFramework>
+    <TargetFramework>net8.0-android</TargetFramework>
     <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -41,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="NumbersJava.Android\NumbersJava.Android.csproj" />
-    <ProjectReference Include="CborJava.Android\CborJava.Android.csproj" />
+    <ProjectReference Include="..\NumbersJava.Android\NumbersJava.Android.csproj" />
+    <ProjectReference Include="..\CborJava.Android\CborJava.Android.csproj" />
   </ItemGroup>
 </Project>
