--- a/SampleForms/SampleApp.Forms/SampleApp.Forms.csproj
+++ b/SampleForms/SampleApp.Forms/SampleApp.Forms.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <BuildWithMSBuildOnMono>true</BuildWithMSBuildOnMono>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -12,6 +13,6 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2515" />
-    <PackageReference Include="CobrowseIO.Xamarin" Version="3.5.0" />
+    <PackageReference Include="CobrowseIO.Xamarin" Version="3.8.0" />
   </ItemGroup>
 </Project>
