fix: make sure the iOS full-device mode is working

--- a/Sample/MauiSample.iOS.BroadcastUploadExtension/MauiSample.iOS.BroadcastUploadExtension.csproj
+++ b/Sample/MauiSample.iOS.BroadcastUploadExtension/MauiSample.iOS.BroadcastUploadExtension.csproj
@@ -6,6 +6,7 @@
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
         <ApplicationVersion>1</ApplicationVersion>
         <SupportedOSPlatformVersion>12.0</SupportedOSPlatformVersion>
+        <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     </PropertyGroup>
 
     <PropertyGroup>
