--- a/Sample/MauiSample/MauiSample.csproj
+++ b/Sample/MauiSample/MauiSample.csproj
@@ -25,6 +25,7 @@
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
 
     <AndroidManifest>Platforms\Android\AndroidManifest.xml</AndroidManifest>
+    <CodesignEntitlements>Platforms\iOS\Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-ios|AnyCPU'">
@@ -69,7 +70,7 @@
     <ProjectReference Include="..\..\DotNet\CobrowseIO\CobrowseIO.csproj" />
   </ItemGroup>
 
-   <ItemGroup Condition="'$(TargetFramework)' == 'net7.0-ios'">
+   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-ios'">
     <ProjectReference Include="..\..\iOS\CobrowseIO.iOS\CobrowseIO.iOS.csproj" />
     <ProjectReference Include="..\..\DotNet\CobrowseIO\CobrowseIO.csproj" />
     <ProjectReference Include="..\MauiSample.iOS.BroadcastUploadExtension\MauiSample.iOS.BroadcastUploadExtension.csproj">
