--- a/.github/workflows/build-pack.yml
+++ b/.github/workflows/build-pack.yml
@@ -17,6 +17,10 @@ jobs:
       with:
         submodules: 'true'
 
+    - uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '8.x.x'
+
     - name: Print toolchain versions
       run: |
         dotnet --version
