chore(ci): update nuspec files

--- a/CobrowseIO.AppExtension.iOS.nuspec
+++ b/CobrowseIO.AppExtension.iOS.nuspec
@@ -11,7 +11,7 @@
         <icon>icon.png</icon>
         <iconUrl>https://avatars3.githubusercontent.com/u/32596876</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Cobrowse.io - .NET Mobile Broadcast Extension</description>
+        <description>Cobrowse.io - .NET iOS Broadcast Extension</description>
         <repository type="git" url="https://github.com/cobrowseio/cobrowse-sdk-xamarin" />
         <tags>xamarin, ios</tags>
         <dependencies>
