--- a/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
+++ b/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
@@ -13,12 +13,20 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <!--
     <PackageReference Include="Xamarin.AndroidX.Core" Version="1.3.2.1" />
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.5" />
     <PackageReference Include="Xamarin.AndroidX.ConstraintLayout" Version="2.0.4" />
     <PackageReference Include="Square.OkHttp3" Version="4.9.2.1" />
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.Process" Version="2.3.0" />
     <PackageReference Include="Xamarin.AndroidX.WebKit" Version="1.4.0" />
+    -->
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.10.1.2" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.6.1.3" />
+    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout" Version="2.1.4.6" />
+    <PackageReference Include="Square.OkHttp3" Version="4.11.0.3" />
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Process" Version="2.6.1.3" />
+    <PackageReference Include="Xamarin.AndroidX.WebKit" Version="1.7.0.1" />
   </ItemGroup>
   
   <!--
