--- a/CobrowseIO.AppExtension.iOS.nuspec
+++ b/CobrowseIO.AppExtension.iOS.nuspec
@@ -13,7 +13,7 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Cobrowse.io - .NET iOS Broadcast Extension</description>
         <repository type="git" url="https://github.com/cobrowseio/cobrowse-sdk-xamarin" />
-        <tags>xamarin, ios</tags>
+        <tags>dotnet, ios, cobrowse</tags>
         <dependencies>
             <group targetFramework="net8.0-ios17.0">
             </group>
