fix: make sure the Android SDK consumes the correct dependency versions

--- a/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.csproj
+++ b/iOS/CobrowseIO.AppExtension.iOS/CobrowseIO.AppExtension.iOS.csproj
@@ -9,7 +9,7 @@
     <Title>Xamarin.CobrowseIO.iOS.AppExtension</Title>
     <Product>Xamarin.CobrowseIO.iOS.AppExtension</Product>
     <RootNamespace>Xamarin.CobrowseIO.iOS.AppExtension</RootNamespace>
-    <Description>Cobrowse.io - .NET Mobile SDK</Description>
+    <Description>Cobrowse.io - .NET iOS and Android SDK</Description>
   </PropertyGroup>
 
   <ItemGroup>
