--- a/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
+++ b/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
@@ -9,24 +9,46 @@
     <Title>Xamarin.CobrowseIO.Android</Title>
     <Product>Xamarin.CobrowseIO.Android</Product>
     <RootNamespace>Xamarin.CobrowseIO.Android</RootNamespace>
-    <Description>Cobrowse.io - .NET Mobile SDK</Description>
+    <Description>Cobrowse.io - .NET iOS and Android SDK</Description>
   </PropertyGroup>
   
   <ItemGroup>
     <!--
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.3.2.1" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.5" />
-    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout" Version="2.0.4" />
-    <PackageReference Include="Square.OkHttp3" Version="4.9.2.1" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Process" Version="2.3.0" />
-    <PackageReference Include="Xamarin.AndroidX.WebKit" Version="1.4.0" />
+    Usually hese are the exact same version required by the native Android SDK as specified here:
+    https://github.com/cobrowseio/cobrowse-sdk-android-binary/blob/master/io/cobrowse/cobrowse-sdk-android/2.30.3/cobrowse-sdk-android-2.30.3.pom
+
+    Whenever updating these versions, make sure to update the nuspec file as well.
     -->
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.10.1.2" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.6.1.3" />
-    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout" Version="2.1.4.6" />
-    <PackageReference Include="Square.OkHttp3" Version="4.11.0.3" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Process" Version="2.6.1.3" />
-    <PackageReference Include="Xamarin.AndroidX.WebKit" Version="1.7.0.1" />
+    <!--
+    The native SDK depends on com.squareup.okhttp3.okhttp v3.12.13;
+    .NET SDK uses Square.OkHttp3 v4.9.2.1 because it's the oldest version that supports .NET.
+    -->
+    <PackageReference Include="Square.OkHttp3" Version="4.9.2.1" />
+    <!--
+    The native SDK depends on androidx.webkit.webkit v1.4.0;
+    .NET SDK uses Xamarin.AndroidX.WebKit v1.5.0 because it's the oldest version that supports .NET.
+    -->
+    <PackageReference Include="Xamarin.AndroidX.WebKit" Version="1.5.0" />
+    <!--
+    The native SDK depends on androidx.core.core v1.3.2;
+    .NET SDK uses Xamarin.AndroidX.Core v1.8.0.1 because it's the version Xamarin.AndroidX.WebKit v1.5.0 depends on.
+    -->
+    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.8.0.1" />
+    <!--
+    The native SDK depends on androidx.appcompat.appcompat v1.2.0;
+    .NET SDK uses Xamarin.AndroidX.AppCompat v1.3.1.1 because it's the oldest version that supports .NET.
+    -->
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.1" />
+    <!--
+    The native SDK depends on androidx.constraintlayout.constraintlayout v2.0.4;
+    .NET SDK uses Xamarin.AndroidX.ConstraintLayout v2.0.4.3 because it's the oldest version that supports .NET.
+    -->
+    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout" Version="2.0.4.3" />
+    <!--
+    The native SDK depends on androidx.lifecycle.lifecycle-process v2.3.0;
+    .NET SDK uses Xamarin.AndroidX.ConstraintLayout v2.3.1.1 because it's the oldest version that supports .NET.
+    -->
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Process" Version="2.3.1.1" />
   </ItemGroup>
   
   <!--
