--- a/DotNet/CobrowseIO/CobrowseIO.csproj
+++ b/DotNet/CobrowseIO/CobrowseIO.csproj
@@ -13,7 +13,7 @@
     <Title>Xamarin.CobrowseIO</Title>
     <Product>Xamarin.CobrowseIO</Product>
     <RootNamespace>Xamarin.CobrowseIO</RootNamespace>
-    <Description>Cobrowse.io - .NET Mobile SDK</Description>
+    <Description>Cobrowse.io - .NET iOS and Android SDK</Description>
     <Company>Cobrowse.io LLC</Company>
     <Version>4.0.0</Version>
     <Configurations>Release;Debug</Configurations>
