--- a/DotNet/CobrowseIO/CobrowseIO.csproj
+++ b/DotNet/CobrowseIO/CobrowseIO.csproj
@@ -2,12 +2,11 @@
 
   <PropertyGroup>
     <TargetFrameworks>net8.0;net8.0-android;net8.0-ios;</TargetFrameworks>
-    <UseMaui>true</UseMaui>
-    <SkipValidateMauiImplicitPackageReferences>true</SkipValidateMauiImplicitPackageReferences>
+    <UseMaui>false</UseMaui>
     <SingleProject>true</SingleProject>
     <ImplicitUsings>false</ImplicitUsings>
 
-    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
+    <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
 
     <Title>Xamarin.CobrowseIO</Title>
@@ -27,19 +26,14 @@
     <CreatePackage>false</CreatePackage>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-    <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net8.0-android')) != true">
+    <Compile Remove="Platforms\Android\*.cs" />
+    <None Include="Platforms\Android\*.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
-    <PackageReference Include="Xamarin.AndroidX.Core" Version="1.10.1.2" />
-    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.6.1.3" />
-    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout" Version="2.1.4.6" />
-    <PackageReference Include="Square.OkHttp3" Version="4.11.0.3" />
-    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Process" Version="2.6.1.3" />
-    <PackageReference Include="Xamarin.AndroidX.WebKit" Version="1.7.0.1" />
+  <ItemGroup Condition="$(TargetFramework.StartsWith('net8.0-ios')) != true">
+    <Compile Remove="Platforms\iOS\*.cs" />
+    <None Include="Platforms\iOS\*.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
   </ItemGroup>
 
   <Target Name="FixMauiBug10150" AfterTargets="Build" Condition="'$(TargetFramework)'=='net8.0-android'">
