--- a/Sample/MauiSample/MauiSample.csproj
+++ b/Sample/MauiSample/MauiSample.csproj
@@ -23,18 +23,24 @@
 
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
+  </PropertyGroup>
 
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
     <AndroidManifest>Platforms\Android\AndroidManifest.xml</AndroidManifest>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net8.0-ios'">
+    <CreatePackage>false</CreatePackage>
+    <!--
+    CodesignEntitlements property appears to be ignored in Debug builds.
+    The following message is printed in the MSBuild output:
+    > The "CodesignEntitlements" property is a global property, and cannot be modified.
+
+    The bug is not reproducible in Release builds.
+    -->
     <CodesignEntitlements>Platforms\iOS\Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0-ios|AnyCPU'">
-    <CreatePackage>false</CreatePackage>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net8.0-ios|AnyCPU'">
-    <CreatePackage>false</CreatePackage>
-  </PropertyGroup>
   <ItemGroup>
     <!-- App Icon -->
     <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
@@ -60,6 +66,13 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+    <!--
+    An Android MAUI app cannot simply rely on the same dependency versions the Cobrowse.io SDK uses.
+    Instead, the client app _must_ specify the exact versions that MAUI relies on. Otherwise
+    it leads to duplicate Java classes build errors.
+    https://github.com/xamarin/AndroidX/issues/764
+    https://github.com/xamarin/GooglePlayServicesComponents/issues/648
+    -->
     <PackageReference Include="Xamarin.AndroidX.Core" Version="1.10.1.2" />
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.6.1.3" />
     <PackageReference Include="Xamarin.AndroidX.ConstraintLayout" Version="2.1.4.6" />
