--- a/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
+++ b/Android/CobrowseIO.Android/CobrowseIO.Android.csproj
@@ -6,10 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Company>Cobrowse.io LLC</Company>
     <Version>2.30.3</Version>
-    <Title>Xamarin.CobrowseIO.Android</Title>
-    <Product>Xamarin.CobrowseIO.Android</Product>
-    <RootNamespace>Xamarin.CobrowseIO.Android</RootNamespace>
-    <Description>Cobrowse.io - .NET iOS and Android SDK</Description>
+    <Title>Cobrowse.IO.Android</Title>
+    <Product>Cobrowse.IO.Android</Product>
+    <RootNamespace>Cobrowse.IO.Android</RootNamespace>
+    <AssemblyName>Cobrowse.IO.Android</AssemblyName>
+    <Description>Cobrowse.io - .NET Android SDK</Description>
   </PropertyGroup>
   
   <ItemGroup>
