--- a/CobrowseIO.DotNet.nuspec
+++ b/CobrowseIO.DotNet.nuspec
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata minClientVersion="2.8.1">
-        <id>CobrowseIO.Xamarin</id>
+        <id>CobrowseIO.DotNet</id>
         <version>4.0.0-alpha01</version>
-        <title>CobrowseIO.Xamarin</title>
+        <title>CobrowseIO.DotNet</title>
         <authors>Cobrowse.io</authors>
         <owners>Cobrowse.io</owners>
         <license type="expression">Apache-2.0</license>
@@ -32,8 +32,8 @@
     </metadata>
     <files>
         <!-- Core -->
-        <file src="DotNet/CobrowseIO/bin/Release/net8.0/CobrowseIO.dll" target="lib\net8.0" />
-        <file src="DotNet/CobrowseIO/bin/Release/net8.0/CobrowseIO.pdb" target="lib\net8.0" />
+        <file src="SDK/CobrowseIO/bin/Release/net8.0/Cobrowse.IO.dll" target="lib\net8.0" />
+        <file src="SDK/CobrowseIO/bin/Release/net8.0/Cobrowse.IO.pdb" target="lib\net8.0" />
 
         <!-- Android-specific files -->
         <file src="Android/NumbersJava.Android/bin/Release/net8.0-android/NumbersJava.Android.aar" target="lib\net8.0-android34.0" />
@@ -47,22 +47,24 @@
         <file src="Android/CborJava.Android/bin/Release/net8.0-android/CborJava.Android.xml" target="lib\net8.0-android34.0" />
 
         <file src="Android/CobrowseIO.Android/bin/Release/net8.0-android/cobrowse-sdk-android-*.aar" target="lib\net8.0-android34.0" />
-        <file src="Android/CobrowseIO.Android/bin/Release/net8.0-android/CobrowseIO.Android.dll" target="lib\net8.0-android34.0" />
-        <file src="Android/CobrowseIO.Android/bin/Release/net8.0-android/CobrowseIO.Android.pdb" target="lib\net8.0-android34.0" />
-        <file src="Android/CobrowseIO.Android/bin/Release/net8.0-android/CobrowseIO.Android.xml" target="lib\net8.0-android34.0" />
+        <file src="Android/CobrowseIO.Android/bin/Release/net8.0-android/Cobrowse.IO.Android.aar" target="lib\net8.0-android34.0" />
+        <file src="Android/CobrowseIO.Android/bin/Release/net8.0-android/Cobrowse.IO.Android.dll" target="lib\net8.0-android34.0" />
+        <file src="Android/CobrowseIO.Android/bin/Release/net8.0-android/Cobrowse.IO.Android.pdb" target="lib\net8.0-android34.0" />
+        <file src="Android/CobrowseIO.Android/bin/Release/net8.0-android/Cobrowse.IO.Android.xml" target="lib\net8.0-android34.0" />
 
-        <file src="DotNet/CobrowseIO/bin/Release/net8.0-android/CobrowseIO.dll" target="lib\net8.0-android34.0" />
-        <file src="DotNet/CobrowseIO/bin/Release/net8.0-android/CobrowseIO.pdb" target="lib\net8.0-android34.0" />
-        <file src="DotNet/CobrowseIO/bin/Release/net8.0-android/CobrowseIO.xml" target="lib\net8.0-android34.0" />
+        <file src="SDK/CobrowseIO/bin/Release/net8.0-android/Cobrowse.IO.aar" target="lib\net8.0-android34.0" />
+        <file src="SDK/CobrowseIO/bin/Release/net8.0-android/Cobrowse.IO.dll" target="lib\net8.0-android34.0" />
+        <file src="SDK/CobrowseIO/bin/Release/net8.0-android/Cobrowse.IO.pdb" target="lib\net8.0-android34.0" />
+        <file src="SDK/CobrowseIO/bin/Release/net8.0-android/Cobrowse.IO.xml" target="lib\net8.0-android34.0" />
 
         <!-- iOS-specific files -->
-        <file src="iOS/CobrowseIO.iOS/bin/Release/net8.0-ios/CobrowseIO.iOS.dll" target="lib\net8.0-ios17.0"/>
-        <file src="iOS/CobrowseIO.iOS/bin/Release/net8.0-ios/CobrowseIO.iOS.pdb" target="lib\net8.0-ios17.0"/>
-        <file src="iOS/CobrowseIO.iOS/bin/Release/net8.0-ios/CobrowseIO.iOS.resources.stamp" target="lib\net8.0-ios17.0"/>
-        <file src="iOS/CobrowseIO.iOS/bin/Release/net8.0-ios/CobrowseIO.iOS.resources.zip" target="lib\net8.0-ios17.0"/>
+        <file src="iOS/CobrowseIO.iOS/bin/Release/net8.0-ios/Cobrowse.IO.iOS.dll" target="lib\net8.0-ios17.0"/>
+        <file src="iOS/CobrowseIO.iOS/bin/Release/net8.0-ios/Cobrowse.IO.iOS.pdb" target="lib\net8.0-ios17.0"/>
+        <file src="iOS/CobrowseIO.iOS/bin/Release/net8.0-ios/Cobrowse.IO.iOS.resources.stamp" target="lib\net8.0-ios17.0"/>
+        <file src="iOS/CobrowseIO.iOS/bin/Release/net8.0-ios/Cobrowse.IO.iOS.resources.zip" target="lib\net8.0-ios17.0"/>
 
-        <file src="DotNet/CobrowseIO/bin/Release/net8.0-ios/CobrowseIO.dll" target="lib\net8.0-ios17.0"/>
-        <file src="DotNet/CobrowseIO/bin/Release/net8.0-ios/CobrowseIO.pdb" target="lib\net8.0-ios17.0"/>
+        <file src="SDK/CobrowseIO/bin/Release/net8.0-ios/Cobrowse.IO.dll" target="lib\net8.0-ios17.0"/>
+        <file src="SDK/CobrowseIO/bin/Release/net8.0-ios/Cobrowse.IO.pdb" target="lib\net8.0-ios17.0"/>
 
         <!-- Package icon -->
         <file src="icon.png" />
